--- a/src/pages/posts/welcome.mdx
+++ b/src/pages/posts/welcome.mdx
@@ -1,20 +1,81 @@
 ---
-slug: welcome
-title: Welcome To Next.js and Netlify Blog Template
-date: 2020-06-10
-author: wutali
+slug: america-is-finished
+title: America Is Finished
+date: 2020-09-25
+author: John Quincy Adams
 tags:
-  - document
+  - america
 ---
 
-## The standard Lorem Ipsum passage
+## America Is Finished
 
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+About twenty years ago The Atlantic published a piece by Jeffrey Tayler named “Russia is finished” subtitled “The unstoppable descent of a once great power into social catastrophe and strategic irrelevance.” Not a very successful prediction was it? But what he did was fashionable at the time — he described what was happening in Russia in the nineties and made a straight-line projection from there. His error was assuming the continuation of the straight line — and he made the error because he thought Russia was only “Zaire With Permafrost”.
 
-## written by Cicero in 45 BC
+My purpose in this essay is to apply the points that the author made about Russia twenty years ago to the United States of America today and adopt a simple straight-line projection based on a corresponding view of American history. This is not so much because I think that America really is finished — after all, as Adam Smith observed, there is a great deal of ruin in a nation, and America has seen hard times before — but in order to illustrate the perilous position America is in today. As the author of the Atlantic piece must now understand, straight-line predictions are always risky because — as happened in Russia — other forces can appear to change the “unstoppable descent”. But a straight-line prediction from the American situation as of the autumn of 2020 does point to an “unstoppable descent” into “social catastrophe and strategic irrelevance”.
 
-"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+In my opinion, Tayler’s principal error, which constrained his estimation of what was possible, was his overarching view of Russia as a brutal, dysfunctional, backwards dictatorship.
 
-## 1914 translation by H. Rackham
+The hostility that Russians feel toward their government comes not from some innate lack of civic duty but from the terror, violence, and deceit that have since the late Middle Ages characterized the way in which their rulers have treated them…
 
-"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"
+Byzantium was moribund, its religion having suffocated the intellectual traditions of the Hellenes.
+
+Mongol khans, with all their pomp and cruelty, became the figures on which many Russian rulers would model themselves…
+
+Muscovite czars, Ivan the Terrible foremost among them, destroyed all institutions that could rival their power, turning the nobility into servants, enslaving the peasants to the nobility, and employing Orthodoxy as their official ideology — for Orthodoxy proclaimed the czar God’s chosen representative on earth…
+
+Russia, isolated and infused with a messianic sense of its own superiority over the West, suffered the predations of rulers bent on building a strong state…
+
+Taking full advantage of Russia’s absolutist traditions, Joseph Stalin followed in the footsteps of Ivan the Terrible and Peter the Great and set about strengthening the state, enacting programs of industrialization and agricultural collectivization: he enslaved vast segments of his population to build industries, mine the earth, and gather crops…
+
+Can only expect more of the same from a country with that past.
+
+This is what might be called the Richard Pipes take on Russia. Let us consider what would be predicted for the future of America if we were to take the Howard Zinn point of view. That is to say, an America based on slave labor, the extermination of native peoples, exploitation of the poor by the rich under cover of an attractive but hollow ideology, predatory behavior in its neighborhood backed by merciless warfare wherever it doesn’t get its way. You could expect only more of the same.
+
+Now the Pipes and Zinn views are not false, but they are partial. Russia is not nothing but a brutal dysfunctional dictatorship, it has its Father Zosimas too. Neither is America just a brutal, dysfunctional plutocracy, it has its spiritual values too. But, just as Tayler took a Pipes view of Russia, we will in what follows take a Zinn view of America. And just as Russia’s future turned out to be much better than Tayler/Pipes foresaw, let us hope that America’s future is better also. We will take the points Tayler makes about Russia, apply them to America and project the future from that point through Zinn’s perspective and see what we get.
+
+Russian oligarchs.
+the oligarchs rose to prominence not by building railroads and industries but by exploiting antiquated pricing systems, disorganized legal codes, and — most important — Soviet-era connections with the government.
+
+The three richest men in America today — owning, it is said, as much as half the population — did not gain their wealth by railroads or industries; one runs a mail order store, one a software company and one is a speculator. The Forbes 400 are worth more than almost two-thirds of the country and COVID has made them even richer while, for the others, unemployment skyrockets. Not surprisingly, a 2014 study found that these plutocrats dominate the so-called democracy. “When a majority of citizens disagrees with economic elites and/or with organized interests, they generally lose.” All rather Zinnish, isn’t it? Difficult to see that trend ending by itself.
+
+Russian contempt for politicians.
+
+When Russians talk of their politicians, they frequently speak of “thieves,” “bandits,” and “swindlers”…
+
+A recent Pew poll on American attitudes to their government shows similar disgust
+
+Even larger majorities say the country is not performing well when it comes to the government being open and transparent (69% say this does not describe the country well), the tone of political debate being respectful (72%), people agreeing on basic facts even if they disagree politically (72%), elected officials facing serious consequences for misconduct (73%) and that campaign contributions do not lead to greater political influence (also 73%).
+
+Russian military failure.
+One of the most spectacular elements of the Soviet Union’s collapse has been Russia’s fall from military superpower №2 to a country whose army can be neutralized by bands of irregulars fighting with little more than the weapons on their backs.
+
+No need to belabor this point — two decades in Afghanistan says it all.
+
+Squandering wealth on weaponry.
+Putin would do well to recall that high defense spending helped to bring about the demise of the Soviet Union.
+
+Enough said — more, more and still more.
+
+Russian population decline.
+Over the past decade Russia’s population has been shrinking by almost a million a year, owing to a plummeting birth rate and a rising number of deaths from alcoholism and violence. Predictions are astonishingly grave: the country could lose a third of its population (now 146 million) by the middle of the century. This does not factor in new scourges — tuberculosis and HIV, in particular, which have been spreading exponentially since 1998.
+
+America’s birthrate is now falling and deaths from opioid overdoses and suicides are rising.
+
+Taking Tayler’s points one after another and comparing Russia with America today, we see it’s not Russia that’s looking bad in 2020.
+
+Oligarchs are losing power in Russia but gaining it in America.
+Confidence in government is rising in Russia but falling in America.
+Russia’ military achievements are rising while America’s are falling.
+Russia’s military expenditure is falling but America’s keeps rising.
+Russian population is stabilizing while America’s is starting to fall.
+And we haven’t been nearly as negative about America’s future as we could have been. With the talk about ignoring the results of November’s elections, how close are we to civil war? Is there really a possibility of a coup d’état? There’s certainly talk of it. There already is a considerable amount of street violence in America now, how much worse will it get? What will the final effects of COVID be? Certainly not an increase in confidence about the American can-do spirit or competence. How many people unemployed by COVID will ever work again? How big can the budget deficit get before it all bursts? Can the US ever get its manufacturing dominance back? What happens to the “American Dream” as most people get poorer while a few become ludicrously rich — here’s a RAND study to put a number on the four-decade trend — trillions and trillions.
+
+Tayler was extremely wrong in his estimation of Putin as many others were, seeing nothing but KGB.
+
+Putin the Terrible… Putin had the security connections to protect them once Yeltsin left office… Putin needs pliant and adoring media to ensure an absolutist rule… Putin supported the reinstatement of a slightly modified version of Stalin’s national anthem… Putin has put forward plans that will only worsen his country’s plight,
+
+But the Putin team changed the trajectory — again “Zaire with permafrost” blocked his mind. Would he expect that Biden/Harris will turn things around in America? (He doesn’t seem to think much of Trump.)
+
+And how did this come to pass? Adams foresaw it — America brought the monsters home.
+
+Russia by contrast is a model of stability, efficiency and prosperity. With a much better future too.
